--- a/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
@@ -15,18 +15,20 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GeneralInforCell" rowHeight="317" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="389" height="317"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="389" height="316.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kLr-1D-u6m">
-                        <rect key="frame" x="0.0" y="0.0" width="389" height="200.5"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="200" id="A7A-X5-USI"/>
-                        </constraints>
-                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8aD-pV-gvp" customClass="iCarousel" customModule="notritionVendorsAPP" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="216.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <connections>
+                            <outlet property="dataSource" destination="-1" id="xYL-64-efM"/>
+                            <outlet property="delegate" destination="-1" id="bef-JU-XhJ"/>
+                        </connections>
+                    </view>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qsb-mH-nth">
-                        <rect key="frame" x="10" y="210.5" width="369" height="40"/>
+                        <rect key="frame" x="10" y="206.5" width="369" height="40"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="XFt-3C-V9c"/>
@@ -36,7 +38,7 @@
                         <textInputTraits key="textInputTraits" textContentType="name"/>
                     </textField>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="ecx-SJ-fph">
-                        <rect key="frame" x="0.0" y="260.5" width="389" height="50"/>
+                        <rect key="frame" x="0.0" y="256.5" width="389" height="50"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f8R-qm-8nN">
                                 <rect key="frame" x="0.0" y="0.0" width="72" height="50"/>
@@ -145,15 +147,15 @@
                     </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="8aD-pV-gvp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="8Un-b3-W2a"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8nn-Rm-C8g"/>
+                    <constraint firstAttribute="trailing" secondItem="8aD-pV-gvp" secondAttribute="trailing" id="AHN-pt-fZQ"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="AqM-Xj-5mN"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="top" secondItem="qsb-mH-nth" secondAttribute="bottom" constant="10" id="IUu-bS-RRK"/>
-                    <constraint firstItem="kLr-1D-u6m" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="IpA-zr-fp1"/>
-                    <constraint firstItem="kLr-1D-u6m" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="LTP-ah-SJT"/>
-                    <constraint firstItem="qsb-mH-nth" firstAttribute="top" secondItem="kLr-1D-u6m" secondAttribute="bottom" constant="10" id="MC2-BP-9eG"/>
-                    <constraint firstItem="kLr-1D-u6m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="aon-oO-kAr"/>
+                    <constraint firstItem="8aD-pV-gvp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KVv-uA-1Tu"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="c5J-6W-uwY"/>
-                    <constraint firstItem="kLr-1D-u6m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="og9-tR-Vnf"/>
+                    <constraint firstItem="8aD-pV-gvp" firstAttribute="bottom" secondItem="qsb-mH-nth" secondAttribute="top" constant="10" id="ing-3c-R2J"/>
+                    <constraint firstItem="8aD-pV-gvp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ob4-Lm-vk7"/>
                     <constraint firstAttribute="trailing" secondItem="ecx-SJ-fph" secondAttribute="trailing" id="sbQ-4c-zEC"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="sgN-uX-VfF"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" constant="-20" id="ue9-AN-Eba"/>
@@ -164,12 +166,12 @@
             <connections>
                 <outlet property="itemComments" destination="frw-O6-wgT" id="uZT-PM-Del"/>
                 <outlet property="itemFavorites" destination="6qi-yg-RNP" id="P9e-m5-PGd"/>
-                <outlet property="itemImage" destination="kLr-1D-u6m" id="UfD-YM-uep"/>
                 <outlet property="itemName" destination="qsb-mH-nth" id="u9l-07-xzn"/>
                 <outlet property="itemPhotos" destination="28k-de-D0A" id="fDP-Hp-dym"/>
                 <outlet property="itemRating" destination="TkN-tt-3Vs" id="y6b-kU-yim"/>
+                <outlet property="viewImage" destination="8aD-pV-gvp" id="xQZ-f1-kTw"/>
             </connections>
-            <point key="canvasLocation" x="36" y="111"/>
+            <point key="canvasLocation" x="36" y="110.19490254872565"/>
         </tableViewCell>
     </objects>
 </document>
