--- a/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GeneralInforItemCell" rowHeight="129" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="389" height="129"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GeneralInforItemCell" rowHeight="321" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="389" height="321"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="389" height="128.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="389" height="320.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qsb-mH-nth">
-                        <rect key="frame" x="10" y="10" width="369" height="40"/>
+                        <rect key="frame" x="10" y="210" width="369" height="40"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="XFt-3C-V9c"/>
@@ -30,7 +30,7 @@
                         <textInputTraits key="textInputTraits" textContentType="name"/>
                     </textField>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="ecx-SJ-fph">
-                        <rect key="frame" x="0.0" y="60" width="389" height="50"/>
+                        <rect key="frame" x="0.0" y="260" width="389" height="50"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f8R-qm-8nN">
                                 <rect key="frame" x="0.0" y="0.0" width="72" height="50"/>
@@ -137,28 +137,39 @@
                             <constraint firstAttribute="height" constant="50" id="SJJ-st-cha"/>
                         </constraints>
                     </stackView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jYS-PF-hoK" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="200"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="j2j-mc-Zcf"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="qsb-mH-nth" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="6vJ-g5-O0y"/>
+                    <constraint firstItem="jYS-PF-hoK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="3Fe-l1-chr"/>
+                    <constraint firstItem="jYS-PF-hoK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="40M-Ky-Kw1"/>
+                    <constraint firstItem="qsb-mH-nth" firstAttribute="top" secondItem="jYS-PF-hoK" secondAttribute="bottom" constant="10" id="6vJ-g5-O0y"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8nn-Rm-C8g"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="AqM-Xj-5mN"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="top" secondItem="qsb-mH-nth" secondAttribute="bottom" constant="10" id="IUu-bS-RRK"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="c5J-6W-uwY"/>
+                    <constraint firstAttribute="trailing" secondItem="jYS-PF-hoK" secondAttribute="trailing" id="keN-f3-RJp"/>
                     <constraint firstAttribute="trailing" secondItem="ecx-SJ-fph" secondAttribute="trailing" id="sbQ-4c-zEC"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="sgN-uX-VfF"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" constant="-20" id="ue9-AN-Eba"/>
                     <constraint firstAttribute="bottom" secondItem="ecx-SJ-fph" secondAttribute="bottom" constant="10" id="z0r-kp-ch0"/>
+                    <constraint firstItem="jYS-PF-hoK" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="zAd-BQ-KtP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="itemComments" destination="frw-O6-wgT" id="uZT-PM-Del"/>
                 <outlet property="itemFavorites" destination="6qi-yg-RNP" id="P9e-m5-PGd"/>
+                <outlet property="itemImage" destination="jYS-PF-hoK" id="oZM-Tk-VIE"/>
                 <outlet property="itemName" destination="qsb-mH-nth" id="u9l-07-xzn"/>
                 <outlet property="itemPhotos" destination="28k-de-D0A" id="fDP-Hp-dym"/>
                 <outlet property="itemRating" destination="TkN-tt-3Vs" id="y6b-kU-yim"/>
             </connections>
-            <point key="canvasLocation" x="-314.39999999999998" y="-201.04947526236884"/>
+            <point key="canvasLocation" x="-314.39999999999998" y="-287.40629685157421"/>
         </tableViewCell>
     </objects>
 </document>
