--- a/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/GeneralInforItemCell.xib
@@ -15,16 +15,18 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GeneralInforItemCell" rowHeight="317" id="KGk-i7-Jjw" customClass="GeneralInforItemCell" customModule="notritionVendorsAPP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="389" height="317"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="389" height="316.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="8aD-pV-gvp">
-                        <rect key="frame" x="0.0" y="0.0" width="389" height="216.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aSR-P2-VJq" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="200"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="n4F-tp-kpg"/>
+                        </constraints>
+                    </imageView>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qsb-mH-nth">
-                        <rect key="frame" x="10" y="206.5" width="369" height="40"/>
+                        <rect key="frame" x="10" y="205" width="369" height="40"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="XFt-3C-V9c"/>
@@ -34,7 +36,7 @@
                         <textInputTraits key="textInputTraits" textContentType="name"/>
                     </textField>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="ecx-SJ-fph">
-                        <rect key="frame" x="0.0" y="256.5" width="389" height="50"/>
+                        <rect key="frame" x="0.0" y="255" width="389" height="50"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f8R-qm-8nN">
                                 <rect key="frame" x="0.0" y="0.0" width="72" height="50"/>
@@ -143,15 +145,14 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="8aD-pV-gvp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="8Un-b3-W2a"/>
+                    <constraint firstItem="qsb-mH-nth" firstAttribute="top" secondItem="aSR-P2-VJq" secondAttribute="bottom" constant="5" id="7Yg-sS-AYq"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8nn-Rm-C8g"/>
-                    <constraint firstAttribute="trailing" secondItem="8aD-pV-gvp" secondAttribute="trailing" id="AHN-pt-fZQ"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="AqM-Xj-5mN"/>
+                    <constraint firstItem="aSR-P2-VJq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ckw-9Z-hDh"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="top" secondItem="qsb-mH-nth" secondAttribute="bottom" constant="10" id="IUu-bS-RRK"/>
-                    <constraint firstItem="8aD-pV-gvp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KVv-uA-1Tu"/>
+                    <constraint firstAttribute="trailing" secondItem="aSR-P2-VJq" secondAttribute="trailing" id="OJa-DN-2em"/>
+                    <constraint firstItem="aSR-P2-VJq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="S2S-he-fLb"/>
                     <constraint firstItem="ecx-SJ-fph" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="c5J-6W-uwY"/>
-                    <constraint firstItem="8aD-pV-gvp" firstAttribute="bottom" secondItem="qsb-mH-nth" secondAttribute="top" constant="10" id="ing-3c-R2J"/>
-                    <constraint firstItem="8aD-pV-gvp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ob4-Lm-vk7"/>
                     <constraint firstAttribute="trailing" secondItem="ecx-SJ-fph" secondAttribute="trailing" id="sbQ-4c-zEC"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="sgN-uX-VfF"/>
                     <constraint firstItem="qsb-mH-nth" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" constant="-20" id="ue9-AN-Eba"/>
@@ -160,9 +161,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imageICarousel" destination="8aD-pV-gvp" id="lkJ-au-QdL"/>
-                <outlet property="itemComments" destination="frw-O6-wgT" id="uZT-PM-Del"/>
+                <outlet property="itemComments" destination="frw-O6-wgT" id="CKv-eG-0oz"/>
                 <outlet property="itemFavorites" destination="6qi-yg-RNP" id="P9e-m5-PGd"/>
+                <outlet property="itemImage" destination="aSR-P2-VJq" id="ixX-g5-zYS"/>
                 <outlet property="itemName" destination="qsb-mH-nth" id="u9l-07-xzn"/>
                 <outlet property="itemPhotos" destination="28k-de-D0A" id="fDP-Hp-dym"/>
                 <outlet property="itemRating" destination="TkN-tt-3Vs" id="y6b-kU-yim"/>
