--- a/notritionVendorsAPP/Controller/hightRating/view/ViewCommentCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/ViewCommentCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ElU-cp-m2s">
                         <rect key="frame" x="0.0" y="0.0" width="469" height="259.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZVC-Ej-YCO" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZVC-Ej-YCO" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
                                 <rect key="frame" x="10" y="10" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="ib7-lx-9Qw"/>
